理清av程序的输入

--- a/data/数据介绍.md
+++ b/data/数据介绍.md
@@ -30,7 +30,7 @@
 
 ## IR USPTO
 
-- 介绍：来自USPTO数据的随机提取，第一行是标签，后2万行是训练集，最后1千行是测试集
+- 介绍：来自USPTO数据的随机提取，第一行是标签，后2万行是训练集，最后1千行是测试集, 用分类构建
 - 参数：trainPaperNum=20000, trainPaperYear_T=(0, 2018), paperTitleWordNum_T=(100, 300), testPaperNum=1000, testPaperYear_T=(2019, 2019), paperAbstractWordNum_T=(150, 400), minRetrievalPaperNum=20, orderChoiceTrainPaper=False
 - 满足条件的理论训练集专利数:2097671, 满足条件的理论测试集专利数:9415, 理论测试集专利最大标签数:734
 - 训练集专利MaxMinAve年份:[2018, 1976, 2003.30525], 训练集专利MaxMinAve词数:[695, 250, 375.62295], 训练集专利MaxMinAve分类:[48, 1, 2.1444], 训练集专利总数:20000, 训练集分类种数:16871, 分类MaxMinAve训练集专利数:[352, 1, 2.542113686207101]
@@ -214,7 +214,7 @@ k:	3	6	9	12	15	18
 acc:	0.7946	0.8142	0.8268	0.8333	0.8344	0.8377
 error rate:	0.2054	0.1858	0.1732	0.1667	0.1656	0.1623
 
-glove: 校服-av_model4
+glove: 校服/本机-av_model4
 k=9
 指标:	acc	error rate
 结果:	0.7505	0.2495
@@ -362,12 +362,12 @@ random-sent: 本机-av_model26
 指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
 结果:	0.0037	0.0013	0.0019	0.0006	0.0035	0.4769
 
-word2vec: 校服-av_model27
+word2vec: 校服/本机-av_model27
 总批次:25200, epoch:217, avg-loss:0.001210, avg-acc:0.999952
 指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
 结果:	0.1853	0.0665	0.0979	0.0937	0.2012	0.5818
 
-word2vec(globe): 校服-av_model28
+word2vec(globe): 校服/本机-av_model28
 总批次:3885, epoch:38, avg-loss:0.005780, avg-acc:0.999905
 指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
 结果:	0.2906	0.1054	0.1547	0.1783	0.3110	0.6401
