--- a/data/数据介绍.md
+++ b/data/数据介绍.md
@@ -1,5 +1,3 @@
-
-
 # 数据集
 
 ## IR arxiv
@@ -28,14 +26,6 @@
     patentRefNum_max_min_avg: [471, 1, 4.966629660805342]
   - 年份_专利数: [('2018', 85817), ('2017', 213869), ('2016', 209516), ('2015', 215122), ('2014', 226477), ('2013', 213507), ('2012', 200827), ('2011', 184127), ('2010', 186263), ('2009', 144093), ('2008', 137935), ('2007', 139159), ('2006', 155974), ('2005', 129477), ('2004', 162897), ('2003', 167531), ('2002', 162980)]
 
-## IR USPTO
-
-- 介绍：来自USPTO数据的随机提取，第一行是标签，后2万行是训练集，最后1千行是测试集, 用分类构建
-- 参数：trainPaperNum=20000, trainPaperYear_T=(0, 2018), paperTitleWordNum_T=(100, 300), testPaperNum=1000, testPaperYear_T=(2019, 2019), paperAbstractWordNum_T=(150, 400), minRetrievalPaperNum=20, orderChoiceTrainPaper=False
-- 满足条件的理论训练集专利数:2097671, 满足条件的理论测试集专利数:9415, 理论测试集专利最大标签数:734
-- 训练集专利MaxMinAve年份:[2018, 1976, 2003.30525], 训练集专利MaxMinAve词数:[695, 250, 375.62295], 训练集专利MaxMinAve分类:[48, 1, 2.1444], 训练集专利总数:20000, 训练集分类种数:16871, 分类MaxMinAve训练集专利数:[352, 1, 2.542113686207101]
-- 测试集专利MaxMinAve年份:[2019, 2019, 2019.0], 测试集专利MaxMinAve词数:[598, 250, 368.864], 测试集专利MaxMinAve标准答案:[24, 20, 21.558], 测试集专利MaxMinAve分类:[16, 1, 3.971], 测试集专利数:1000, 测试集专利分类种数:3263, 测试集专利分类种数(包含没有在训练集中出现的分类):7228
-
 ## all dblp
 
 - 最终提取到2229296篇全属性论文, 过滤的引文数量:2899803
@@ -59,175 +49,8 @@
 - 训练集专利MaxMinAve年份:[2016, 2002, 2009.9023], 训练集专利MaxMinAve词数:[680, 250, 372.0914], 训练集专利总数:20000
 - 测试集专利MaxMinAve年份:[2018, 2017, 2017.267], 测试集专利MaxMinAve词数:[629, 255, 375.311], 测试集专利MaxMinAve引文数:[29, 8, 10.643], 测试集专利数:1000
 
-## TC IMDB
 
-- 介绍：IMDB情感分类数据集，前部和后部分割采用词级别的二分
-- testWord_max_min_avg:[2278, 4, 228.52668], trainWord_max_min_avg:[2470, 10, 233.7872], 训练集数量:25000, 测试集数量:25000
-
-## TC AGnews
-
-- 介绍：AG新闻分类数据集，有标题和描述
-- testWord_max_min_avg:[137, 11, 37.72236842105263], trainWord_max_min_avg:[177, 8, 37.84745], 训练集数量:120000, 测试集数量:7600
-
-# 实验结果
-
-## IR arxiv
-
-random embedding(可反向传播词向量): 本机-av_model
-总批次:7452, epoch:89, avg-loss:0.055147, avg-acc:0.999800
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.1175	0.0414	0.0612	0.0575	0.1356	0.5454
-
-glove(globe): 本机-av_model2
-总批次:5728, epoch:39, avg-loss:0.082151, avg-acc:0.999600
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2281	0.0842	0.1230	0.1253	0.2474	0.6059
-
-word2vec(globe): 本机-av_model3
-总批次:3968, epoch:48, avg-loss:0.089826, avg-acc:0.999600
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.3066	0.1124	0.1645	0.1893	0.3233	0.6474
-
-random embedding: 本机-av_model4
-总批次:6678, epoch:80, avg-loss:0.093531, avg-acc:0.999714
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.1188	0.0435	0.0637	0.0584	0.1372	0.5468
-
-BERT: 本机-av_model5
-总批次:3738, epoch:30, avg-loss:0.062210, avg-acc:0.999619
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2610	0.0951	0.1394	0.1541	0.2824	0.6236
-
-glove: 本机-av_model6
-总批次:5502, epoch:66, avg-loss:0.106222, avg-acc:0.999619
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.1399	0.0515	0.0752	0.0676	0.1566	0.5572
-
-XLM: 本机-av_model7
-总批次:18725, epoch:49, avg-loss:0.024178, avg-acc:0.999857
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2396	0.0883	0.1291	0.1366	0.2568	0.6107
-
-XLNet: 本机-av_model8
-总批次:20545, epoch:197, avg-loss:0.069535, avg-acc:0.999000
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.1396	0.0483	0.0718	0.0643	0.1511	0.5538
-
-glove: 服务器-av_model
-总批次:1320, epoch:16, avg-loss:0.026900, avg-acc:0.999800
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.0876	0.0322	0.0471	0.0328	0.0970	0.5254
-
-word2vec: 服务器-av_model2
-总批次:796, epoch:10, avg-loss:0.031048, avg-acc:0.999600
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.1862	0.0667	0.0982	0.0965	0.2021	0.5825
-
-BERT(wwm): 服务器-av_model3
-总批次:6132, epoch:73, avg-loss:0.006594, avg-acc:0.999905
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2374	0.0843	0.1244	0.1312	0.2541	0.6091
-
-## IR USPTO
-
-word2vec: 本机-av_model6
-总批次:20496, epoch:244, avg-loss:0.005204, avg-acc:0.999905
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.1261	0.1173	0.1216	0.0570	0.1390	0.5479
-
-glove: 本机-av_model7
-总批次:4620, epoch:26, avg-loss:0.018053, avg-acc:0.999905
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.0964	0.0897	0.0930	0.0422	0.1112	0.5338
-
-glove(globe): 本机-av_model8
-总批次:5376, epoch:1, avg-loss:0.003476, avg-acc:1.000000
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.1197	0.1112	0.1153	0.0514	0.1320	0.5442
-
-XLNet: 服务器-av_model
-总批次:3098, epoch:30, avg-loss:0.002810, avg-acc:0.999906
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.0941	0.0875	0.0907	0.0362	0.1028	0.5295
-
-random embedding: 服务器-av_model4
-总批次:10584, epoch:126, avg-loss:0.000397, avg-acc:1.000000
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.0391	0.0364	0.0377	0.0138	0.0453	0.4985
-
-word2vec(globe): 服务器-av_model5
-总批次:1008, epoch:12, avg-loss:0.002381, avg-acc:0.999905
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.1211	0.1124	0.1166	0.0536	0.1323	0.5448
-
-## CR dblp
-
-word2vec: 本机-av_model
-总批次:28896, epoch:344, avg-loss:0.034195, avg-acc:0.999333
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2646	0.3469	0.3002	0.1724	0.3278	0.6503
-
-word2vec(globe): 本机-av_model2
-总批次:17304, epoch:206, avg-loss:0.013110, avg-acc:1.000000
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2808	0.3680	0.3185	0.1846	0.3476	0.6595
-
-glove: 本机-av_model3
-总批次:26208, epoch:286, avg-loss:0.014676, avg-acc:1.000000
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2527	0.3312	0.2867	0.1641	0.3176	0.6429
-
-random embedding: 本机-av_model4
-总批次:7872, epoch:16, avg-loss:0.032007, avg-acc:1.000000
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2007	0.2630	0.2277	0.1244	0.2576	0.6106
-
-glove(globe): 本机-av_model5
-总批次:13335, epoch:79, avg-loss:0.016859, avg-acc:1.000000
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2592	0.3397	0.2941	0.1663	0.3227	0.6463
-
-BERT: 本机-av_model6
-总批次:2730, epoch:26, avg-loss:0.032372, avg-acc:0.999808
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.2355	0.3088	0.2672	0.1477	0.2964	0.6320
-
-XLNet: 本机-av_model7
-总批次:28141, epoch:62, avg-loss:0.053652, avg-acc:0.999524
-指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-结果:	0.1321	0.1732	0.1499	0.0656	0.1650	0.5611
-
-
-## IMDB
-
-random embedding: 本机-av_model
-
-word2vec(0.01): 本机-av_model2
-总批次:2000, epoch:4, avg-loss:0.100806, avg-acc:0.980640
-k:	3	6	9	12	15	18
-acc:	0.7930	0.8115	0.8208	0.8262	0.8267	0.8301
-error rate:	0.2070	0.1885	0.1792	0.1738	0.1733	0.1699
-
-word2vec(0.001): 本机-av_model3
-总批次:2250, epoch:10, avg-loss:0.009731, avg-acc:0.981260
-k:	3	6	9	12	15	18
-acc:	0.7946	0.8142	0.8268	0.8333	0.8344	0.8377
-error rate:	0.2054	0.1858	0.1732	0.1667	0.1656	0.1623
-
-glove: 校服/本机-av_model4
-k=9
-指标:	acc	error rate
-结果:	0.7505	0.2495
-
-## TC AGnews
-
-word2vec(0.01): 本机-av_model
-总批次:4466, epoch:6, avg-loss:0.034783, avg-acc:0.993150
-k:	3	6	9	12	15	18
-acc:	0.8962	0.9041	0.9080	0.9095	0.9067	0.9072
-error rate:	0.1038	0.0959	0.0920	0.0905	0.0933	0.0928
-
-# 实验结果-f和b一起训练
+# 模型结果
 
 ## IR arxiv
 
@@ -693,327 +516,3 @@ word2vec(globe): 本机-av_model29	使用训练集筛选 = 0.5
 总批次:8085, epoch:78, avg-loss:0.144439, avg-acc:0.998571
 指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
 结果:	0.2716	0.3561	0.3082	0.1832	0.3436	0.6577
-
-# 无训练, 只有CTPE
-
-## IR arxiv
-
-- word2vec(globe): 
-  训练集大小:21000, 新词数:77523, 新词s:38857, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.2092	0.0740	0.1093	0.1107	0.2306	0.5968
-- word2vec：
-  训练集大小:21000, 新词数:79256, 新词s:39048, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.1069	0.0375	0.0555	0.0455	0.1230	0.5393
-- glove:
-  训练集大小:21000, 新词数:78132, 新词s:39007, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0271	0.0091	0.0137	0.0088	0.0326	0.4920
-- glove(globe):
-  训练集大小:21000, 新词数:77702, 新词s:38798, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0421	0.0139	0.0209	0.0130	0.0479	0.5001
-- random-word
-  训练集大小:21000, 新词数:238912, 新词s:217567, 加入新词s:200000
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0079	0.0022	0.0034	0.0031	0.0111	0.4803
-- skip-thoughts:
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0017	0.0004	0.0007	0.0009	0.0030	0.4763
-
-深度模型
-
-- ELMo(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0701	0.0239	0.0356	0.0295	0.0820	0.5176
-
-- GPT(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0161	0.0053	0.0080	0.0058	0.0212	0.4853
-
-- GPT2.0(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0020	0.0007	0.0011	0.0002	0.0014	0.4756
-
-- BERT(wwm)(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0554	0.0176	0.0267	0.0209	0.0648	0.5087
-
-- Transformer XL(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0222	0.0069	0.0105	0.0067	0.0256	0.4884
-
-- XLM(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0226	0.0069	0.0106	0.0083	0.0287	0.4899
-
-- XLNet(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0030	0.0010	0.0015	0.0005	0.0029	0.4764
-
-- RoBERTa(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0046	0.0013	0.0020	0.0011	0.0049	0.4776
-
-- ELMo:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0925	0.0322	0.0478	0.0398	0.1049	0.5306
-
-- GPT:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0179	0.0059	0.0089	0.0057	0.0217	0.4858
-
-- GPT2.0:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0037	0.0014	0.0020	0.0005	0.0034	0.4770
-
-- BERT(wwm):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0619	0.0205	0.0308	0.0243	0.0738	0.5136
-
-- Transformer XL:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0295	0.0097	0.0146	0.0102	0.0355	0.4929
-
-- XLM:
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0629	0.0210	0.0315	0.0245	0.0784	0.5154
-
-- XLNet:
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0116	0.0041	0.0060	0.0027	0.0124	0.4815
-
-- RoBERTa:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0137	0.0044	0.0067	0.0040	0.0160	0.4831
-
-## CR USPTO
-
-- word2vec(globe): 
-
-  训练集大小:21000, 新词数:0, 新词s:0, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.1597	0.3047	0.2095	0.0936	0.2019	0.5823
-
-- word2vec：
-  训练集大小:21000, 新词数:0, 新词s:0, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.1667	0.3156	0.2182	0.1006	0.2121	0.5871
-
-- glove:
-  训练集大小:21000, 新词数:0, 新词s:0, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.1211	0.2276	0.1581	0.0706	0.1607	0.5590
-
-- glove(globe):
-  训练集大小:21000, 新词数:0, 新词s:0, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.1237	0.2336	0.1617	0.0700	0.1606	0.5588
-
-- random-word
-  训练集大小:21000, 新词数:238912, 新词s:217567, 加入新词s:200000
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0423	0.0784	0.0549	0.0247	0.0624	0.5057
-
-- skip-thoughts:
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0050	0.0102	0.0067	0.0019	0.0062	0.4782
-
-深度模型
-
-- ELMo(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0917	0.1727	0.1198	0.0480	0.1198	0.5368
-
-- GPT(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0752	0.1435	0.0987	0.0395	0.0999	0.5266
-
-- GPT2.0(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0015	0.0031	0.0021	0.0005	0.0018	0.4759
-
-- BERT(wwm)(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0759	0.1426	0.0991	0.0400	0.1016	0.5275
-
-- Transformer XL(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0981	0.1858	0.1284	0.0523	0.1271	0.5416
-
-- XLM(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0891	0.1678	0.1163	0.0471	0.1174	0.5356
-
-- XLNet(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0074	0.0142	0.0097	0.0026	0.0099	0.4800
-
-- RoBERTa(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0348	0.0649	0.0454	0.0179	0.0487	0.4991
-
-- ELMo:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0932	0.1755	0.1218	0.0496	0.1225	0.5379
-
-- GPT:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0586	0.1116	0.0769	0.0280	0.0771	0.5143
-
-- GPT2.0:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0008	0.0015	0.0010	0.0002	0.0009	0.4754
-
-- BERT(wwm):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0459	0.0872	0.0601	0.0216	0.0629	0.5072
-
-- Transformer XL:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0838	0.1606	0.1102	0.0446	0.1131	0.5328
-
-- XLM:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0518	0.0985	0.0679	0.0247	0.0717	0.5116
-
-- XLNet:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0063	0.0117	0.0082	0.0025	0.0089	0.4792
-
-- RoBERTa:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0066	0.0124	0.0086	0.0030	0.0095	0.4796
-
-## CR dblp
-
-- word2vec(globe): 
-
-  训练集大小:21000, 新词数:0, 新词s:0, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.1417	0.1857	0.1607	0.0772	0.1816	0.5697
-
-- word2vec：
-  训练集大小:21000, 新词数:0, 新词s:0, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.1225	0.1605	0.1390	0.0632	0.1557	0.5556
-
-- glove:
-  训练集大小:21000, 新词数:0, 新词s:0, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0186	0.0245	0.0212	0.0063	0.0228	0.4871
-
-- glove(globe):
-  训练集大小:21000, 新词数:0, 新词s:0, 加入新词s:0
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0390	0.0511	0.0442	0.0144	0.0485	0.5000
-
-- random-word
-  训练集大小:21000, 新词数:238912, 新词s:217567, 加入新词s:200000
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0019	0.0026	0.0022	0.0004	0.0020	0.4762
-
-- skip-thoughts:
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0014	0.0018	0.0015	0.0003	0.0015	0.4759
-
-深度模型
-
-- ELMo(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0203	0.0266	0.0230	0.0074	0.0255	0.4884
-
-- GPT(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0271	0.0354	0.0307	0.0128	0.0374	0.4939
-
-- GPT2.0(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0006	0.0008	0.0007	0.0001	0.0005	0.4752
-
-- BERT(wwm)(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0083	0.0109	0.0095	0.0028	0.0106	0.4806
-
-- Transformer XL(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0120	0.0158	0.0137	0.0043	0.0159	0.4827
-
-- XLM(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0053	0.0069	0.0060	0.0018	0.0069	0.4786
-
-- XLNet(标题和摘要分开训练):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0008	0.0010	0.0009	0.0001	0.0008	0.4754
-
-- RoBERTa(标题和摘要分开训练):
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0033	0.0044	0.0038	0.0010	0.0037	0.4769
-
-- ELMo:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0277	0.0363	0.0314	0.0104	0.0350	0.4932
-
-- GPT:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0254	0.0333	0.0288	0.0118	0.0355	0.4925
-
-- GPT2.0:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0008	0.0011	0.0009	0.0001	0.0007	0.4754
-
-- BERT(wwm):
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0253	0.0331	0.0286	0.0106	0.0344	0.4922
-
-- Transformer XL:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0170	0.0224	0.0193	0.0064	0.0220	0.4863
-
-- XLM:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0227	0.0298	0.0258	0.0094	0.0315	0.4905
-
-- XLNet:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0107	0.0140	0.0121	0.0037	0.0139	0.4818
-
-- RoBERTa:
-
-  指标:	macro-P	macro-R	macro-F1	MAP	NDCG	bpref
-  结果:	0.0205	0.0268	0.0232	0.0086	0.0271	0.4886
